<resources>
  <string name="search_providers_list_key" translatable="false">search_providers_list</string>
  <string name="locale_key" translatable="false">app_locale_1</string>
  <string name="search_types_list_key" translatable="false">search_type_list</string>
  <string name="auto_update_key" translatable="false">auto_update</string>
  <string name="auto_update_plugins_key" translatable="false">auto_update_plugins</string>
  <string name="auto_download_plugins_key" translatable="false">auto_download_plugins_key2</string>
  <string name="skip_update_key" translatable="false">skip_update_key</string>
  <string name="prerelease_update_key" translatable="false">prerelease_update</string>
  <string name="manual_check_update_key" translatable="false">manual_check_update</string>
  <string name="fast_forward_button_time_key" translatable="false">fast_forward_button_time</string>
  <string name="benene_count" translatable="false">benene_count</string>
  <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
  <string name="test_providers_key" translatable="false">test_providers_key</string>
  <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
  <string name="enable_chromecast_key" translatable="false">enable_chromecast_key</string>
  <string name="enable_fcast_key" translatable="false">enable_fcast_key</string>
  <string name="cast_quality_key" translatable="false">cast_quality_key</string>
  <string name="about_chromecast_key" translatable="false">about_chromecast_key</string>
  <string name="about_fcast_key" translatable="false">about_fcast_key</string>
  <string name="quality_pref_key" translatable="false">quality_pref_key</string>
  <string name="quality_pref_mobile_data_key" translatable="false">quality_pref_mobile_data_key</string>
  <string name="player_pref_key" translatable="false">player_pref_key</string>
  <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
  <string name="prefer_limit_title_rez_key" translatable="false">prefer_limit_title_rez_key</string>
  <string name="apk_installer_key" translatable="false">apk_installer_key</string>
  <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
  <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
  <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
  <string name="mpv_conf_editor_key" translatable="false">mpv_conf_editor</string>
  <string name="lua_scripts_key" translatable="false">lua_scripts</string>
  <string name="ai_key_openai_key" translatable="false">ai_key_openai_key</string>
  <string name="ai_key_anthropic_key" translatable="false">ai_key_anthropic_key</string>
  <string name="ai_key_groq_key" translatable="false">ai_key_groq_key</string>
  <string name="ai_key_openrouter_key" translatable="false">ai_key_openrouter_key</string>
  <string name="ai_default_provider_key" translatable="false">ai_default_provider_key</string>
  <string name="ai_openrouter_model_key" translatable="false">ai_openrouter_model_key</string>
  <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
  <string name="use_system_brightness_key" translatable="false">use_system_brightness_key</string>
  <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
  <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
  <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
  <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
  <string name="stats_overlay_enabled_key" translatable="false">stats_overlay_enabled_key</string>
  <string name="audio_visualizer_enabled_key" translatable="false">audio_visualizer_enabled_key</string>
  <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
  <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
  <string name="double_tap_seek_time_key" translatable="false">double_tap_seek_time_key2</string>
  <string name="android_tv_interface_off_seek_key" translatable="false">android_tv_interface_off_seek_key</string>
  <string name="android_tv_interface_on_seek_key" translatable="false">android_tv_interface_on_seek_key</string>
  <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
  <string name="show_gesture_percentage_key" translatable="false">show_gesture_percentage_key</string>
  <string name="autoplay_next_key" translatable="false">autoplay_next_key</string>
  <string name="display_sub_key" translatable="false">display_sub_key</string>
  <string name="show_fillers_key" translatable="false">show_fillers_key</string>
  <string name="show_trailers_key" translatable="false">show_trailers_key</string>
  <string name="show_kitsu_posters_key" translatable="false">show_kitsu_posters_key</string>
  <string name="random_button_key" translatable="false">random_button_key</string>
  <string name="provider_lang_key" translatable="false">provider_lang_key</string>
  <string name="dns_key" translatable="false">dns_key</string>
  <string name="jsdelivr_proxy_key" translatable="false">jsdelivr_proxy_key</string>
  <string name="download_path_key" translatable="false">download_path_key</string>
  <string name="download_over_wifi_key" translatable="false">download_over_wifi_key</string>
  <string name="download_over_metered_key" translatable="false">download_over_metered_key</string>
  <string name="download_notification_key" translatable="false">download_notification_key</string>
  <string name="download_auto_retry_key" translatable="false">download_auto_retry_key</string>
  <string name="download_concurrent_limit_key" translatable="false">download_concurrent_limit_key</string>
  <string name="download_torrent_port_key" translatable="false">download_torrent_port_key</string>
  <string name="download_max_speed_key" translatable="false">download_max_speed_key</string>
  <string name="override_site_key" translatable="false">override_site_key</string>
  <string name="title_downloads">Downloads</string>
  <string name="pref_disable_acra">Disable automatic bug reporting</string>
  <string name="sort_copy">Copy</string>
  <string name="sort_close">Close</string>
  <string name="sort_clear">Clear</string>
  <string name="sort_save">Save</string>
  <string name="battery_optimisation_key" translatable="false">battery_optimisation</string>
  <string name="bug_report_settings_off">Only sends data on crashes</string>
  <string name="bug_report_settings_on">Sends no data</string>
  <string name="updates_settings">Show app updates</string>
  <string name="updates_settings_des">Automatically search for new updates after starting the app.</string>
  <string name="apk_installer_settings">APK Installer</string>
  <string name="apk_installer_settings_des">Some phones do not support the new package installer. Try the legacy option if updates do not install. </string>
  <string name="app_language">App Language</string>
  <string name="cancel">Cancel</string>
  <string name="check_for_update">Check for Update</string>
  <string name="dns_pref">DNS over HTTPS</string>
  <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
  <string name="add_site_pref">Clone site</string>
  <string name="add_site_summary">Add a clone of an existing site, with a different URL</string>
  <string name="download_path_pref">Download path</string>
  <string name="pref_category_bypass">ISP Bypasses</string>
  <string name="pref_category_app_updates">App updates</string>
  <string name="cast_category_general">Cast Options</string>
  <string name="cast_category_info">Information</string>
  <string name="enable_chromecast">Enable Chromecast</string>
  <string name="enable_chromecast_summary">Cast videos to Chromecast devices</string>
  <string name="enable_fcast">Enable Fcast</string>
  <string name="enable_fcast_summary">Cast videos using Fcast protocol (WebVideoCaster)</string>
  <string name="cast_quality">Cast Quality</string>
  <string name="cast_quality_summary">Preferred quality for casting</string>
  <string name="about_chromecast">About Chromecast</string>
  <string name="about_chromecast_summary">Learn more about Chromecast</string>
  <string name="about_fcast">About Fcast</string>
  <string name="about_fcast_summary">Learn more about Fcast and WebVideoCaster</string>
  <string name="app_version" translatable="false">v1.0.7</string>
  <string name="quick_settings">Quick Settings</string>
  <string name="media_view_mode">View mode</string>
  <string name="view_mode_tree">Tree</string>
  <string name="view_mode_folders">Folders</string>
  <string name="view_mode_carousel">Carousel</string>
  <string name="sort_by">Sort by</string>
  <string name="sort_title">Title</string>
  <string name="sort_duration">Duration</string>
  <string name="sort_date">Date</string>
  <string name="sort_size">Size</string>
  <string name="sort_location">Location</string>
  <string name="sort_asc">AZ</string>
  <string name="sort_desc">ZA</string>
  <string name="display_fields">Display Fields</string>
  <string name="field_duration">Duration</string>
  <string name="field_extension">Extension</string>
  <string name="field_path">Path</string>
  <string name="field_progress">Played progress</string>
  <string name="field_resolution">Resolution</string>
  <string name="field_size">Size</string>
  <string name="field_thumbnail">Thumbnail</string>
  <string name="apply">Apply</string>
  <string name="grid">Grid</string>
  <string name="list">List</string>
  <string name="media_group_mode">Group mode</string>
  <string name="download_over_wifi">Download over WiFi only</string>
  <string name="download_over_wifi_summary">Only download when connected to WiFi</string>
  <string name="download_over_metered">Allow metered connections</string>
  <string name="download_over_metered_summary">Allow downloads over mobile data (may incur charges)</string>
  <string name="download_notification">Show download notifications</string>
  <string name="download_notification_summary">Display notifications for download progress and completion</string>
  <string name="download_auto_retry">Auto-retry failed downloads</string>
  <string name="download_auto_retry_summary">Automatically retry downloads that fail</string>
  <string name="download_concurrent_limit">Concurrent downloads</string>
  <string name="download_concurrent_limit_summary">Maximum number of simultaneous downloads</string>
  <string name="download_torrent_port">Torrent port</string>
  <string name="download_torrent_port_summary">Port for torrent connections (default: 6881)</string>
  <string name="download_max_speed">Maximum download speed</string>
  <string name="download_max_speed_summary">Limit download speed (0 = unlimited)</string>
  <string name="pref_category_download_general">General</string>
  <string name="pref_category_download_network">Network</string>
  <string name="pref_category_download_torrent">Torrent Settings</string>
  <string name="pref_category_download_notifications">Notifications</string>
  <string name="battery_dialog_title">Disable Battery optimization</string>
  <string name="pref_category_ai_api_keys">API Keys</string>
  <string name="pref_category_ai_model">Model</string>
  <string name="ai_key_openai">OpenAI API key</string>
  <string name="ai_key_anthropic">Anthropic API key</string>
  <string name="ai_key_groq">Groq API key</string>
  <string name="ai_key_openrouter">OpenRouter API key</string>
  <string name="ai_default_provider">Default provider</string>
  <string name="ai_openrouter_model">OpenRouter model</string>
  <string name="ai_openrouter_model_des">Model id used when OpenRouter is the default provider</string>
</resources>