<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <SwitchPreferenceCompat android:layout="@layout/custom_switch_preference"
    android:defaultValue="true"
    android:icon="@drawable/ic_baseline_bug_report_24"
    android:key="acra.disable"
    android:summaryOff="@string/bug_report_settings_off"
    android:summaryOn="@string/bug_report_settings_on"
    android:title="@string/pref_disable_acra" />

  <PreferenceCategory android:title="@string/pref_category_app_updates">
    <Preference
      android:layout="@layout/custom_preference"
      android:title="@string/check_for_update"
      app:icon="@drawable/ic_baseline_system_update_24"
      app:key="@string/manual_check_update_key"
      app:summary="@string/app_version" />
<!--    <SwitchPreferenceCompat android:layout="@layout/custom_switch_preference"-->
<!--      android:icon="@drawable/ic_baseline_developer_mode_24"-->
<!--      android:summary="@string/uprereleases_settings_des"-->
<!--      android:title="@string/uprereleases_settings"-->
<!--      app:defaultValue="@bool/is_prerelease"-->
<!--      app:key="@string/prerelease_update_key" />-->
    <Preference
      android:icon="@drawable/ic_download"
      android:key="@string/apk_installer_key"
      android:layout="@layout/custom_preference"
      android:summary="@string/apk_installer_settings_des"
      android:title="@string/apk_installer_settings" />

    <SwitchPreferenceCompat android:layout="@layout/custom_switch_preference"
      android:icon="@drawable/ic_baseline_notifications_active_24"
      android:summary="@string/updates_settings_des"
      android:title="@string/updates_settings"
      app:defaultValue="true"
      app:key="@string/auto_update_key" />
  </PreferenceCategory>


</PreferenceScreen>
