<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp">

    <TextView
      android:id="@+id/text1"
      android:layout_width="match_parent"

      android:layout_height="wrap_content"
      android:layout_rowWeight="1"
      android:padding="15dp"
      android:textColor="@color/text_primary"
      android:textSize="15sp"
      tools:text="Test" />
  </ScrollView>

  <HorizontalScrollView
    android:id="@+id/apply_btt_holder"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="bottom"
    android:layout_marginTop="-60dp"
    android:gravity="bottom|end"
    android:scrollbars="none">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btt"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:nextFocusRight="@id/copy_btt"
        android:text="@string/sort_save" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/copy_btt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical|end"
        android:nextFocusLeft="@id/save_btt"
        android:nextFocusRight="@id/clear_btt"
        android:text="@string/sort_copy" />


      <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_btt"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:nextFocusLeft="@id/copy_btt"
        android:nextFocusRight="@id/close_btt"
        android:text="@string/sort_clear" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/close_btt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:nextFocusLeft="@id/clear_btt"
        android:text="@string/sort_close" />
    </LinearLayout>
  </HorizontalScrollView>

</LinearLayout>
